fixed project display button on smaller screens not displaying properly

--- a/src/css/projectDisplay.module.css
+++ b/src/css/projectDisplay.module.css
@@ -146,3 +146,17 @@
     margin-top: 100px;
   }
 }
+
+@media only screen and (max-width: 410px) {
+  .projectButton,
+  .codeButton {
+    display: inline-block;
+    font-weight: bold;
+    font-size: 0.9rem;
+    margin: 20px 10px;
+    padding: 8px 12px;
+  }
+  .projectInfoWrapper {
+    padding: 10px 10px;
+  }
+}
